# veritas

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build-core.sh  build.rs  release-plz.toml
.github/workflows/: release-plz.yml  release.yml
app/VeritasShare/: Info.plist  ShareViewController.swift  VeritasShare.entitlements
app/veritas/: ContentView.swift  ImageOCR.swift  Info.plist  SharedConstants.swift  veritas.entitlements  veritasApp.swift
app/veritas.xcodeproj/: project.pbxproj
app/veritas/Assets.xcassets/MenuBarIcon.imageset/: Contents.json
app/veritas/Assets.xcassets/VeritasLogo.imageset/: Contents.json
app/veritasTests/: veritasTests.swift
app/veritasUITests/: veritasUITests.swift  veritasUITestsLaunchTests.swift
core/: .gitignore  Cargo.toml  README.md  build-local.sh
core/src/: checkpoint.rs  lib.rs  logging.rs  nostr.rs  runner.rs  types.rs
scripts/: sync-version.sh
